--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ahcarter22/running_log_client",
+  "homepage": "https://ahcarter22.github.io/running_log_client",
   "name": "react-auth-template",
   "version": "0.1.0",
   "private": true,
